# Synthos

./: .gitignore  CONTEXT.md  ENV.md  README.md  pyproject.toml
diffsynth/configs/: model_configs.py  vram_management_module_maps.py
diffsynth/diffusion/: flow_match.py  parsers.py  runner.py
diffsynth/pipelines/: wan_video.py
examples/wanvideo/model_inference/: Synthos-I2I.py  Wan2.1-I2I-1.3B.py  Wan2.1-T2I-1.3B.py  Wan2.1-T2V-1.3B.py
examples/wanvideo/model_training/: train.py
examples/wanvideo/model_training/full/: Synthos-I2I-img-emb-only.sh  Synthos-I2I.sh  Wan2.1-I2I-1.3B.sh
scripts/: download_contrastyles.py  download_contrastyles_full.py  filter_metadata_by_resolution.py
